docs: fixing swagger
