# docs/swagger.json
@@ -1157,36 +1157,21 @@
                 }
             }
         },
-        "/proponent/{id}": {
+        "/proponent/": {
             "get": {
-                "description": "Retrieves a proponent by ID",
+                "description": "Retrieves every proponent",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "proponent"
                 ],
-                "summary": "Get Proponent",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Proponent ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
+                "summary": "Gets all proponents",
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "Proponent deleted successfully",
                         "schema": {
-                            "$ref": "#/definitions/models.Proponent"
-                        }
-                    },
-                    "400": {
-                        "description": "ProponentID not found",
-                        "schema": {
-                            "$ref": "#/definitions/utils.ErrorResponse"
+                            "type": "boolean"
                         }
                     },
                     "404": {
@@ -1202,7 +1187,9 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/proponent/create": {
             "post": {
                 "description": "Creates a new proponent",
                 "consumes": [
@@ -1216,13 +1203,6 @@
                 ],
                 "summary": "Create Proponent",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Proponent ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
                     {
                         "description": "Proponent details",
                         "name": "proponent",
@@ -1247,7 +1227,9 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/proponent/delete/{id}": {
             "delete": {
                 "description": "Deletes a proponent by ID",
                 "produces": [
@@ -1292,7 +1274,9 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/proponent/update/{id}": {
             "patch": {
                 "description": "Updates an existing proponent by ID",
                 "consumes": [
@@ -1332,6 +1316,53 @@
                     },
                     "400": {
                         "description": "Invalid JSON or ProponentID not found",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Proponent not found",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/proponent/{id}": {
+            "get": {
+                "description": "Retrieves a proponent by ID",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "proponent"
+                ],
+                "summary": "Get Proponent",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Proponent ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Proponent"
+                        }
+                    },
+                    "400": {
+                        "description": "ProponentID not found",
                         "schema": {
                             "$ref": "#/definitions/utils.ErrorResponse"
                         }
